# quotabar

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  (+1 more)
docs/: demo-proof.md  release.md  tray-visibility-controls-spec.md
scripts/: check_latest_request_wiring.mjs  check_latest_request_wiring.test.mjs  check_ts_diff_coverage.mjs  check_ts_diff_coverage.test.mjs  install_app.sh  reinstall_and_run.sh  run_app.sh  stop_app.sh
src/: App.tsx  main.tsx  redesign-settings.css  redesign.css  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/domain/: models.rs
src-tauri/src/services/: claude.rs  codex.rs  codex_cache.rs  codex_pricing.rs  cost.rs  mod.rs  tray.rs  tray_icon.rs  window.rs
tests/: backend_unavailable.test.ts  budget.test.ts  claude_tray_percent.test.ts  cost_daily.test.ts  cost_summary_error.test.ts  detail_helpers.test.ts  event_log.test.ts  fatal_error_reporting.test.tsx  latest_request_generation.test.ts  notification_delivery_failures.test.ts  notifications.test.ts  pace_text.test.ts  panel_sections.test.ts  popover_window_visibility.test.tsx  provider_refresh_races.test.tsx  provider_summary.test.ts  quick_actions.test.tsx  storage_read_failures.test.ts  storage_write_failures.test.ts  switcher_providers.test.ts  switcher_visibility_transactions.test.tsx  tray_style.test.ts  tray_toggles.test.tsx  tray_visibility.test.ts
(+92 files in other folders)
