[package]
name = "quotabar"
version = "0.2.0"
description = "Quota and cost monitor for Claude Code and Codex"
authors = ["QuotaBar Contributors"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quotabar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
dirs = "5"
image = { version = "0.25", default-features = false, features = ["png"] }
once_cell = "1.19"
ccstats = { git = "https://github.com/majiayu000/ccstats.git", rev = "7dbfad0ffc29277da22cd095db067e88982f3f12" }
tauri-plugin-notification = "2.3.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
